Fixed issues with crypto addresses and QR codes overflowing on mid-width devices.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -105,6 +105,16 @@
     color: #ecf0f1;
 }
 
+.qr {
+    height: auto;
+    width: 240px;
+    max-width: 100%;
+}
+
+.addr {
+    overflow-wrap: break-word;
+}
+
 .jumbotron {
     margin-bottom: 0;
 }
